--- a/Confectionery/Confectionery.csproj
+++ b/Confectionery/Confectionery.csproj
@@ -30,6 +30,8 @@
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="Mapster.EFCore" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="4.0.0" />
+    <PackageReference Include="React.AspNet" Version="5.2.12" />
   </ItemGroup>
 
   <Target Name="Mapster">
